examples/test/testpolicy9463.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9463
  namespace: namespace0
spec:
  podSelector:
    matchLabels:
      key20: value36
      key31: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value48
          key37: value34
      podSelector:
        matchLabels:
          key47: value9
